# jfcpi

./: .bzrignore  2.4.xml  INSTALL  Makefile  Makefile.am  README  TODO  autogen.sh  codeGen.manifest.in  configure.ac  inspectTrace.bat.in  inspectTrace.in  javaGen.manifest.in  listFiles.sh  listVar.sh  packetsExtract.in  playRecord.bat.in  playRecord.in  proxyRecorder.bat.in  proxyRecorder.in  signIn.manifest.in  signInToServer.bat.in  testSignInToServer.bat.in  testSignInToServer.in  trunk.xml
BindingsUsers/Users/org/freeciv/recorder/: Filter.java  FilterAllAccepted.java  FilterAnd.java  FilterIsRaw.java  FilterMany.java  FilterNot.java  FilterOr.java  FilterPacketFromClientToServer.java  FilterPacketKind.java  FilterSometimesWorking.java  ProxyRecorder.java  Sink.java  SinkForward.java  SinkInformUser.java  SinkWriteTrace.java
BindingsUsers/Users/org/freeciv/test/: ProxyRecorder.java  SignInAndWait.java
BindingsUsers/org/freeciv/test/: SignInAndWait.java
Core/org/freeciv/: Util.java
Core/org/freeciv/connection/: AlwaysRaw.java  BackgroundReader.java  BadProtocolData.java  Connection.java  DoneReading.java  FreecivConnection.java  HeaderData.java  InterpretWhenPossible.java  Interpreted.java  Over.java  OverImpl.java  PacketInputStream.java  PacketRead.java  PacketWrite.java  PacketsMapping.java  ProtocolData.java  ProtocolVariantAutomatic.java  ProtocolVariantManually.java  RawFCProto.java  ReflexPacketKind.java  ReflexReaction.java  ReflexRuleTime.java  SerializedCompressedPackets.java  SerializedPacketGroup.java  SerializedSinglePacket.java  ToPacket.java  Uninterpreted.java
Core/org/freeciv/packet/: Capabilities.java  CapabilityCombination.java  CompressedPacket.java  DecompressedPacket.java  DeltaKey.java  Packet.java  PacketHeader.java  PostRecv.java  RawPacket.java
Core/org/freeciv/packet/fieldtype/: FieldType.java  FieldTypeException.java  IllegalNumberOfElementsException.java
Core/org/freeciv/types/: BitVector.java  UnderstoodBitVector.java
Core/org/freeciv/utility/: EndsInEternalZero.java  Util.java
Core/src/org/freeciv/connection/: AlwaysRaw.java  (+26 more)
Examples/C#/: SignIn.cs
Examples/Scala/: SignIn.scala
Examples/Scheme/: SignIn.scm
Examples/kawa/: SignIn.scm
GeneratePackets/config/: 2.4.xml  2.5.xml  2.6.xml  3.0.xml  trunk.xml
GeneratePackets/data/: constants.h  core_needs.xml
GeneratePackets/org/freeciv/packetgen/: BasicFieldTypeAsFieldTypeAlias.java  BitVector.java  ClassWriter.java  Constant.java  DataIO.java  DefinedCType.java  DependencyStore.java  DiffArrayElementDataType.java  DiffArrayElementFieldType.java  Enum.java  Field.java  FieldAliasArrayMaker.java  FieldTypeBasic.java  GeneratePackets.scala  GeneratorDefaults.java.in  Hardcoded.java  IDependency.java  IntExpression.java  JavaSrc.java  MissingParameterError.java  NetworkIO.java  Packet.java  PacketCollisionException.java  PacketHeaderKinds.java  PacketsStore.java  ParseCCode.scala  ParsePacketsDef.scala  ParseShared.scala  Requirement.java  SimpleTypeAlias.java  TerminatedArray.java  UndefinedException.java  Wrapped.java
GenerateTestCode/src/capabilities/: capabilities.xml  packets.def
GenerateTestCode/src/delta/: delta.def  delta.xml
GenerateTestCode/src/fieldArray/: fieldArray.def  fieldArray.xml
GenerateTestCode/src/simple/: simple.xml
GenerateTestCode/src/various/: various.def  various.var  various.xml
GenerateTestCode/test/org/freeciv/: ProtoData.java
JavaGenerator/com/kvilhaugsvik/javaGenerator/: Address.java  Annotate.java  Block.java  ClassKind.java  ClassWriter.java  Comment.java  DefaultStyle.java  EnumElements.java  IAnnotatable.java  Import.java  Imports.java  Method.java  TargetArray.java  TargetClass.java  TargetMethod.java  TargetPackage.java  Var.java
LegacyTests/ThatGenerateSourceCode/capabilities/: vars
LegacyTests/ThatGenerateSourceCode/simple/: simple.def  simple.xml
Protocol/org/freeciv/: Connect.java  NotReadyYetException.java  PacketsMapping.java  Util.java
Protocol/org/freeciv/connection/: BufferIncoming.java  ConnectionRelated.java  FreecivConnection.java  HeaderData.java  Interpretated.java  Interpreted.java  NotReadyYetException.java  Over.java  OverImpl.java  PacketChangeHeader.java  PacketInputStream.java  PacketRead.java  PacketWrite.java  PacketsMapping.java  ReflexActionChangeHeaderKind.java  ReflexPacketKind.java  ReflexReaction.java  ReflexRule.java  Uninterpreted.java
Protocol/org/freeciv/packet/: Cancel.java  DeltaKey.java  FieldType.java  Force.java  Header_2_1.java  Header_2_2.java  IsGameInfo.java  IsInfo.java  NoDelta.java  Packet.java  PacketHeader.java  RawPacket.java  Sent.java
Protocol/org/freeciv/types/: BitVector.java  FCEnum.java  UnderstoodBitVector.java
Protocol/org/freeciv/utility/: EndlessZeroInputStream.java  EndsInEternalZero.java
SignInTest/org/freeciv/test/: SignInAndWait.java
Tests/OfGeneratedCode/org/freeciv/: ProtoData.java
Tests/ThatGenerateSourceCode/simple/: simple.var
Tests/org/freeciv/connection/: NetworkUninterpreted.java
Tests/org/freeciv/packet/: ElementsLimitTest.java  PacketTest.java
Tests/org/freeciv/packetgen/: CParserTest.scala  CodeGenTest.java  DependencyStoreTest.java  EnumTest.java  GenerateTest.java  PacketsDefParseTest.scala  PacketsStoreTest.java  ParseSharedTest.scala  ParseTest.scala
Tests/org/freeciv/test/: CodeGenTest.java  FieldTypeTests.java  GenerateTest.java  GeneratedEnumTest.java  GeneratedPacketTest.java  GeneratedStructTest.java  PacketTest.java  PacketsStoreTest.java  ParseTest.scala  SignInAndWait.java
Tests/org/freeciv/utility/: TestArgumentSettings.java
Utility/org/freeciv/utility/: ArgumentSettings.java  Setting.java  Strings.java  UI.java  Validation.java
m4/: ax_find_hamcrest.m4  ax_find_junit.m4  ax_find_scala_stdlib.m4  ax_prog_scala.m4  ax_prog_scalac.m4
src/org/freeciv/: Connect.java
src/org/freeciv/packet/: FieldType.java  RawPacket.java
src/org/freeciv/packetgen/: Field.java  Hardcoded.java  Packet.java
test/org/freeciv/test/: GenerateTest.java  PacketTest.java  PacketsStoreTest.java  ParseTest.scala  SignInAndWait.java
(+387 files in other folders)
